--- a/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
@@ -44,37 +44,45 @@
                         </div>
                     </div> -->
                 <div class="col-lg-5">
-                    <div class="row">
-                        <div class="col-sm-4 col-xl-3">
-                            <div class="thumbnail-imgs">
-                                <div *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i" class="thumbnail-img">
-                                    <div class="owl-thumb" [class.active]="i == activeSlide">
-                                        <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
-                                            [alt]="image.alt" class="img-fluid" (click)="owlCar.to(activeSlide1 = i.toString())">
+                    <div class="sticky-scroll">
+                        <div class="row">
+                            <div class="col-sm-4 col-xl-3">
+                                <div class="thumbnail-imgs">
+                                    <div *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i" class="thumbnail-img">
+                                        <div class="owl-thumb" [class.active]="i == activeSlide">
+                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                                                [alt]="image.alt" class="img-fluid" (click)="activeSlide = i.toString();ChangeImage();" (mouseover)="activeSlide = i.toString();ChangeImage();">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-sm-8 col-xl-9 product-carousel">
-                            <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar class="product-slick">
+                            <div class="col-sm-8 col-xl-9 product-carousel">
+                                <img id="zoom_01" class="img-fluid" src="{{ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[activeSlide]}}"
+                                />
+                                <!-- <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar class="product-slick">
                                 <ng-container *ngFor="let image of productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
                                     <ng-template carouselSlide [id]="i">
                                         <div>
 
-                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[activeSlide]"
                                                 [alt]="image.alt" class="img-fluid">
                                         </div>
                                     </ng-template>
                                 </ng-container>
-                            </owl-carousel-o>
+                            </owl-carousel-o> -->
+                            </div>
                         </div>
-                    </div>
-                    <div class="product-buttons row mt-2">
-                        <div class="col-md-6 mb-2">
-                            <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false" (click)="addToCart(1)">add to cart</a>
-                        </div>
-                        <div class="col-md-6 mb-2">
-                            <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false" (click)="addToCart(2)">buy now</a>
+                        <div class="product-buttons row mt-2">
+                            <div class="col-md-6 mb-2">
+                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="productkart[0]?.qty==0" (click)="addToCart(2)"><i
+                                    class="fa fa-bolt"></i>
+                                Buy now</a>
+                            </div>
+                            <div class="col-md-6 mb-2">
+                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="productkart[0]?.qty==0" (click)="addToCart(1)"><i
+                                    class="fa fa-shopping-cart"></i> add to cart</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -100,7 +108,8 @@
                     <div class="product-right">
                         <h4><b>{{ productkart[0]?.productName }}</b></h4>
                         <h4>
-                            <del *ngIf="productkart[0]?.discount > 0">{{  productkart[0]?.price | currency: productService.Currency?.currency:'symbol' }}</del>
+                            <del *ngIf="productkart[0]?.discount > 0">{{ productkart[0]?.price | currency:
+                                productService.Currency?.currency:'symbol' }}</del>
                             <span *ngIf="productkart[0]?.discount > 0"> {{ productkart[0]?.discount }}%
                                 off</span>
                         </h4>
