--- a/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
@@ -259,7 +259,7 @@
                 </div>
             </div>
 
-            <section class="tab-product m-0">
+            <section class="tab-product m-0 unsticky">
                 <div class="row">
                     <div class="col-sm-12 col-lg-12">
                         <ngb-tabset [type]="'tabs'" class="nav-material">
