--- a/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
@@ -239,7 +239,7 @@
                     </div>
                 </div>
             </div>
-            <section class="tab-product m-0">
+            <section class="tab-product m-0 unsticky">
                 <div class="row">
                     <div class="col-sm-12 col-lg-12">
                         <ngb-tabset [type]="'tabs'" class="nav-material">
