--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -71,7 +71,7 @@
                             </div>
 
                             <div class="checkout-steps" *ngIf="Address2">
-                                <h5 class="step-heading"><span class="Sequence">1</span>Delivery Address
+                                <h5 class="step-heading" style="color: lightgray;"><span class="Sequence">1</span>Delivery Address
                                     <i class="fa fa-check"></i>
                                 </h5>
                                 <div class="d-flex justify-content-between align-items-center align">
@@ -243,7 +243,7 @@
 
                             <div class="checkout-steps" *ngIf="OrderSummary1">
                                 <div class="step-heading d-flex justify-content-between align-items-center">
-                                    <h5>
+                                    <h5 style="color: lightgray;">
                                         <span class="Sequence">2</span><span>Order Summary</span>
                                         <i class="fa fa-check" *ngIf="fafaCheck"></i>
                                     </h5>
@@ -431,7 +431,7 @@
 
                             <!--*********************Payment Options****************-->
                             <div class="checkout-steps" *ngIf="PaymentOption1">
-                                <h5 class="step-heading">
+                                <h5 class="step-heading" style="color: lightgray;">
                                     <span class="Sequence">3</span><span> Payment Options</span>
                                 </h5>
 
