--- a/src/app/pages/account/thanks/thanks.component.html
+++ b/src/app/pages/account/thanks/thanks.component.html
@@ -1,7 +1,13 @@
-<section class="login-page section-b-space">
+<section class="login-page section-b-space" style="margin-top: 30px !important;">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
+                <img src="assets/images/icon/logo.svg" class="img-fluid logo-size" alt="logo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+
                 <br>
                 <h5 style="color: green; text-align: center;">
                     Thank you for registering. We will inform you as soon as your account will be approved.
