--- a/src/app/pages/account/register/register.component.html
+++ b/src/app/pages/account/register/register.component.html
@@ -23,10 +23,7 @@
                                 <div class="input-group-prepend india-code">
                                     <div class="input-group-text">+91</div>
                                 </div>
-                                <input autofocus type="text" id="MobileNumber" class="form-control"
-                                    [readonly]="mobileverified" (keypress)="keytab($event)" placeholder="Mobile Number"
-                                    maxlength="10" autocomplete="off" (keydown)="keydownEvent($event)"
-                                    [ngClass]="{ 'is-invalid': submitted && f.mobileNo.errors }"
+                                <input autofocus type="text" id="MobileNumber" class="form-control" [readonly]="mobileverified" (keypress)="keytab($event)" placeholder="Mobile Number" maxlength="10" autocomplete="off" (keydown)="keydownEvent($event)" [ngClass]="{ 'is-invalid': submitted && f.mobileNo.errors }"
                                     formControlName="mobileNo">
 
                                 <!-- <div *ngIf="submitted && f.mobileNo.errors" class="invalid-feedback">
@@ -40,9 +37,7 @@
                                 </div>
 
                                 <!-- <div *ngIf="!mobileverified" class="input-group-append"> -->
-                                <button *ngIf="!mobileverified" #otp class="btn btn-sm btn-success" type="button"
-                                    autofocus [ngClass]="{'btn-loading': loginStart}"
-                                    (click)="validateAndCheckMobile();">Send
+                                <button *ngIf="!mobileverified" #otp class="btn btn-sm btn-success" type="button" autofocus [ngClass]="{'btn-loading': loginStart}" (click)="validateAndCheckMobile();">Send
                                     OTP</button>
                                 <!-- </div> -->
                             </div>
@@ -70,16 +65,14 @@
 
                                 </div> -->
                                 <div class="otpContainer">
-                                    <input type="text" formControlName="mobileotp" maxlength='6' #SetFocus
-                                        style="width: 112px;" id="txtverify" />
+                                    <input type="text" formControlName="mobileotp" maxlength='6' #SetFocus style="width: 112px;" id="txtverify" />
 
                                     <!-- <input #SetFocus type="text" id="txtverify" [mask]="NumberMask" #mask=""
                                         [dropSpecialCharacters]="false" formControlName="mobileotp"
                                         [showMaskTyped]="showMask" floatLabelType='Always' (focus)="addMask($event);"> -->
                                 </div>
                             </div>
-                            <button class=" btn btn-success mt-4" type="button" [ngClass]="{'btn-loading': VerifyStart}"
-                                (click)="verifyMobileOtp();">Verify</button>
+                            <button class=" btn btn-success mt-4" type="button" [ngClass]="{'btn-loading': VerifyStart}" (click)="verifyMobileOtp();">Verify</button>
                         </div>
                         <div class="form-group" *ngIf="mobileOTP">
                             <h6 class="text-center" style="color: #969696">Resend OTP in:<b> {{counter}}
@@ -91,8 +84,7 @@
                             <div class="form-group">
 
                                 <label for="email">Your First and Last Name</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="fname" formControlName="name" maxlength="45"
-                                    autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+                                <input type="text" class="form-control" id="fname" formControlName="name" maxlength="45" autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
 
                                 <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
                                     <div>First and Last Name is required
@@ -102,9 +94,7 @@
 
                             <div class="form-group">
                                 <label>Business Type</label><span style="color:red">*</span>
-                                <select id="ddlBusinessType" name="ddlBusinessType" class="custom-select"
-                                    formControlName="BusinessType"
-                                    [ngClass]="{ 'is-invalid': submitted && f.BusinessType.errors }">
+                                <select id="ddlBusinessType" name="ddlBusinessType" class="custom-select" formControlName="BusinessType" [ngClass]="{ 'is-invalid': submitted && f.BusinessType.errors }">
                                     <option value="">select</option>
                                     <option value="SoleProprietorship">Sole Proprietorship</option>
                                     <option value="Partnership">Partnership</option>
@@ -122,8 +112,7 @@
 
                             <div class="form-group">
                                 <label>Industry</label><span style="color:red">*</span>
-                                <select class="custom-select" formControlName="Industry" id="ddlIndustry"
-                                    [ngClass]="{ 'is-invalid': submitted && f.Industry.errors }">
+                                <select class="custom-select" formControlName="Industry" id="ddlIndustry" [ngClass]="{ 'is-invalid': submitted && f.Industry.errors }">
                                     <option value="">select</option>
                                     <option value="Retail"> Retail (Fashion / Accessories)</option>
                                     <option value="Wholesale">Wholesale</option>
@@ -137,9 +126,7 @@
                             </div>
                             <div class="form-group">
                                 <label>Business License Type</label><span style="color:red">*</span>
-                                <select id="ddlLicenseType" class="custom-select" formControlName="businessLicenseType"
-                                    (change)="ChangeLicenseType()"
-                                    [ngClass]="{ 'is-invalid': submitted && f.businessLicenseType.errors }">
+                                <select id="ddlLicenseType" class="custom-select" formControlName="businessLicenseType" (change)="ChangeLicenseType()" [ngClass]="{ 'is-invalid': submitted && f.businessLicenseType.errors }">
                                     <option value="">select</option>
                                     <option value="GSTIN"> Goods and Services Tax Identification Number (GSTIN)
                                     </option>
@@ -152,12 +139,17 @@
                                 </div>
                             </div>
 
+                            <div class="form-group" *ngIf="f.businessLicenseType.value!=''">
+
+                                <label for="file">Upload File</label>
+
+                                <input #file type="file" multiple="" (change)="UploadFile($event)" />
+                            </div>
+
                             <div class="form-group" *ngIf="f.businessLicenseType.value=='GSTIN'">
 
                                 <label for="email">GST Number</label><span style="color:red">*</span>
-                                <input #GSTNo type="text" class="form-control input-upper" id="txtGSTNo"
-                                    autocomplete="off" (input)="GSTNo.value = GSTNo.value.toUpperCase()"
-                                    formControlName="GSTNo" maxlength="15" placeholder="GST No">
+                                <input #GSTNo type="text" class="form-control input-upper" id="txtGSTNo" autocomplete="off" (input)="GSTNo.value = GSTNo.value.toUpperCase()" formControlName="GSTNo" maxlength="15" placeholder="GST No">
                                 <div *ngIf="submitted && f.GSTNo.errors" class="Customerror">
                                     <div>GST Number is required
                                     </div>
@@ -167,9 +159,7 @@
                             <div class="form-group" *ngIf="f.businessLicenseType.value=='BusinessPAN'">
 
                                 <label for="email">PAN Number</label><span style="color:red">*</span>
-                                <input type="text" #PANNo class="form-control" id="txtPANNo" maxlength="10"
-                                    formControlName="PANNo" (input)="PANNo.value = PANNo.value.toUpperCase()"
-                                    placeholder="PAN No">
+                                <input type="text" #PANNo class="form-control" id="txtPANNo" maxlength="10" formControlName="PANNo" (input)="PANNo.value = PANNo.value.toUpperCase()" placeholder="PAN No">
                                 <div *ngIf="submitted && f.PANNo.errors" class="Customerror">
                                     <div>PAN Number is required
                                     </div>
@@ -178,10 +168,7 @@
                             <div class="form-group" *ngIf="f.businessLicenseType.value=='AadharCard'">
 
                                 <label for="email">Aadhar Card</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="txtAadharCard" autocomplete="off"
-                                    formControlName="AadharCard" maxlength="14" placeholder="Aadhar Card"
-                                    [mask]="AadharNumberMask" [showMaskTyped]="showMask"
-                                    (focus)="addAadharMask($event);" [dropSpecialCharacters]="false">
+                                <input type="text" class="form-control" id="txtAadharCard" autocomplete="off" formControlName="AadharCard" maxlength="14" placeholder="Aadhar Card" [mask]="AadharNumberMask" [showMaskTyped]="showMask" (focus)="addAadharMask($event);" [dropSpecialCharacters]="false">
                                 <div *ngIf="submitted && f.AadharCard.errors" class="Customerror">
                                     <div>Aadhar Card is required
                                     </div>
@@ -190,9 +177,7 @@
                             <div class="form-group">
 
                                 <label for="email">Business Name</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="BusinessName" formControlName="BusinessName"
-                                    autocomplete="off" maxlength="100"
-                                    [ngClass]="{ 'is-invalid': submitted && f.BusinessName.errors }">
+                                <input type="text" class="form-control" id="BusinessName" formControlName="BusinessName" autocomplete="off" maxlength="100" [ngClass]="{ 'is-invalid': submitted && f.BusinessName.errors }">
                                 <div *ngIf="submitted && f.BusinessName.errors" class="invalid-feedback">
                                     <div>Business Name is required
                                     </div>
@@ -203,10 +188,7 @@
                             <div class="form-group">
 
                                 <label for="email">Business Phone</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="txtBusinessPhone" maxlength="10"
-                                    formControlName="BusinessPhone" [mask]="PhoneMask" [dropSpecialCharacters]="false"
-                                    [showMaskTyped]="showMask" (focus)="addPhoneMask($event);"
-                                    [ngClass]="{ 'is-invalid': submitted && f.BusinessPhone.errors }">
+                                <input type="text" class="form-control" id="txtBusinessPhone" maxlength="10" formControlName="BusinessPhone" [mask]="PhoneMask" [dropSpecialCharacters]="false" [showMaskTyped]="showMask" (focus)="addPhoneMask($event);" [ngClass]="{ 'is-invalid': submitted && f.BusinessPhone.errors }">
 
                                 <div *ngIf="submitted && f.BusinessPhone.errors" class="invalid-feedback">
                                     <div>Business Phone is required
@@ -216,9 +198,7 @@
                             <div class="form-group">
 
                                 <label for="email">Address1</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="Address1" formControlName="Address1"
-                                    autocomplete="off" maxlength="100"
-                                    [ngClass]="{ 'is-invalid': submitted && f.Address1.errors }">
+                                <input type="text" class="form-control" id="Address1" formControlName="Address1" autocomplete="off" maxlength="100" [ngClass]="{ 'is-invalid': submitted && f.Address1.errors }">
 
                                 <div *ngIf="submitted && f.Address1.errors" class="invalid-feedback">
                                     <div>Address1 is required
@@ -229,17 +209,13 @@
                             <div class="form-group">
 
                                 <label for="email">Address2</label>
-                                <input type="text" class="form-control" id="Address2" formControlName="Address2"
-                                    autocomplete="off" maxlength="70">
+                                <input type="text" class="form-control" id="Address2" formControlName="Address2" autocomplete="off" maxlength="70">
                             </div>
 
                             <div class="form-group">
 
                                 <label for="email">Pin Code</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="txtPinCode" formControlName="pinCode"
-                                    autocomplete="off" maxlength="6" [mask]="PinCodeMask"
-                                    [dropSpecialCharacters]="false" (focus)="addPinCodeMask($event);"
-                                    [ngClass]="{ 'is-invalid': submitted && f.pinCode.errors }">
+                                <input type="text" class="form-control" id="txtPinCode" formControlName="pinCode" autocomplete="off" maxlength="6" [mask]="PinCodeMask" [dropSpecialCharacters]="false" (focus)="addPinCodeMask($event);" [ngClass]="{ 'is-invalid': submitted && f.pinCode.errors }">
 
                                 <div *ngIf="submitted && f.pinCode.errors" class="invalid-feedback">
                                     <div>Pin Code is required
@@ -250,8 +226,7 @@
                             <div class="form-group">
 
                                 <label for="email">City</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="City" formControlName="city" maxlength="48"
-                                    autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.city.errors }">
+                                <input type="text" class="form-control" id="City" formControlName="city" maxlength="48" autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.city.errors }">
 
 
                                 <div *ngIf="(submitted) && f.city.errors" class="invalid-feedback">
@@ -262,8 +237,7 @@
 
                             <div class="form-group">
                                 <label>State</label><span style="color:red">*</span>
-                                <select class="custom-select" formControlName="state" id="ddlState"
-                                    [ngClass]="{ 'is-invalid': submitted && f.state.errors }">
+                                <select class="custom-select" formControlName="state" id="ddlState" [ngClass]="{ 'is-invalid': submitted && f.state.errors }">
                                     <option value="">select</option>
                                     <option value="Andhra Pradesh">Andhra Pradesh</option>
                                     <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands
@@ -313,9 +287,7 @@
                             <div class="form-group">
                                 <label>Email ID</label><span style="color:red">*</span>
                                 <div class="input-group">
-                                    <input type="text" id="txtemail" class="form-control" formControlName="email"
-                                        maxlength="50" autocomplete="off"
-                                        [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+                                    <input type="text" id="txtemail" class="form-control" formControlName="email" maxlength="50" autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
 
                                     <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                                         <div *ngIf="f.email.errors.required">Email is required</div>
@@ -328,9 +300,7 @@
 
                                 <label for="review">Password</label><span style="color:red">*</span>
                                 <div class="input-group">
-                                    <input type="{{inputType}}" class="form-control" id="review" id="password"
-                                        formControlName="password" autocomplete="off" maxlength="20"
-                                        [ngClass]="{ 'is-invalid': submitted && f.password.errors }" required="">
+                                    <input type="{{inputType}}" class="form-control" id="review" id="password" formControlName="password" autocomplete="off" maxlength="20" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" required="">
                                     <div class="input-group-append frm-icon" (click)="hideShowPassword()">
                                         <span class="input-group-text">
                                             <i class="{{class}}"></i>
@@ -343,22 +313,19 @@
                                     <div *ngIf="f.password.errors.required">Password is required</div>
 
                                 </div>
-                                <div *ngIf="(submitted) && RegistrationForm.controls.password.errors?.minlength"
-                                    class="Customerror">
+                                <div *ngIf="(submitted) && RegistrationForm.controls.password.errors?.minlength" class="Customerror">
                                     Password must be at least 8 characters.
                                 </div>
 
                             </div>
                             <div class="mt-3 text-center">
-                                <button class="btn btn-primary px-4" type="submit"
-                                    (click)="CreateRegistration();">CREATE
+                                <button class="btn btn-primary px-4" type="submit" (click)="CreateRegistration();">CREATE
                                     ACCOUNT</button>
 
                             </div>
                         </div>
                         <div class=" text-center mt-4 font-weight-light">
-                            Already have an account? <a href="javaScript:void(0);" (click)="Login()"
-                                class="text-primary">Login</a>
+                            Already have an account? <a href="javaScript:void(0);" (click)="Login()" class="text-primary">Login</a>
                         </div>
 
                     </form>
